<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem1"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardBackgroundColor="@color/CardColor"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="35dp"
                android:text="@string/semester_1"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem2"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="31dp"
                android:text="@string/semester_2"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem3"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="26dp"
                android:text="@string/semester_3"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem4"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardBackgroundColor="@color/CardColor"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="24dp"
                android:text="@string/semester_4"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem5"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardBackgroundColor="@color/CardColor"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="28dp"
                android:text="@string/semester_5"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem6"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="24dp"
                android:text="@string/semester_6"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem7"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="18dp"
                android:text="@string/semester_7"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sem8"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            app:cardBackgroundColor="@color/CardColor"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="27dp"
                android:paddingTop="36dp"
                android:paddingEnd="13dp"
                android:text="@string/semester_8"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="1dp">

        <Button
            android:id="@+id/btn_calc_cgpa"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/orange"
            android:elevation="1dp"
            android:text="@string/my_cgpa"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_my_performance"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/orange"
            android:elevation="1dp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/my_performance"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>