<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".my_performance">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp">

        <TextView
            android:id="@+id/tv_actionBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_performance"
            android:textStyle="bold"
            android:layout_marginStart="17dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@color/White"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/c1"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            app:cardElevation="1.8dp">

            <TextView
                android:id="@+id/tv_mp_titleSem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem1"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c2"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp"
            android:background="@color/Black"
            android:clickable="false"
            app:cardElevation="1.8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem2"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/c3"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            app:cardElevation="1.8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem3"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c4"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp"
            android:background="@color/Black"
            app:cardElevation="1.8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem4"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/c5"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            app:cardElevation="1.8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem5"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c6"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp"
            android:background="@color/Black"
            app:cardElevation="1.8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem6"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/c7"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            app:cardElevation="1.8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem7"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/c8"
            android:layout_width="192dp"
            android:layout_height="130dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp"
            android:background="@color/Black"
            app:cardElevation="1.8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:text="@string/sem8"
                android:typeface="serif"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_mp_sem8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/na"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>